fix scrollbar y in /Services

--- a/src/components/LandingServices/LandingServices.css
+++ b/src/components/LandingServices/LandingServices.css
@@ -6,6 +6,7 @@
   background-color: blueviolet;
   height: 30vh;
   width: 100vw;
+  max-width: 100%;
   color: #fff;
 }
 .landing-service-title-container{
